<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardlist_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="@dimen/cardview_default_elevation">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_shape"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/setting_pieces_delete"
            style="@style/setting_row">

            <android.support.v7.widget.AppCompatTextView
                style="@style/setting_item"
                android:text="@string/setting_comment_delete" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/setting_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingRight="20dp"
                android:text="@string/setting_comment_Cache_size"
                android:textColor="@color/color_content"
                android:textSize="14sp" />

            <ImageView style="@style/setting_right_image" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_pieces_idea"
            style="@style/setting_item_single"
            android:text="@string/setting_comment_idea" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_share"
            style="@style/setting_item_single"
            android:text="@string/setting_comment_share" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_pieces_update"
            style="@style/setting_item_single"
            android:text="@string/setting_comment_update" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_pieces_about"
            style="@style/setting_item_single"
            android:text="@string/setting_comment_about" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.CardView>