<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/setting_header"
            android:orientation="horizontal">
            <!--颜色柱子-->
            <TextView
                android:layout_width="5dp"
                android:layout_height="15dp"
                android:background="@color/color_start"
                android:gravity="bottom" />
            <!--这个是头部显示-->
            <TextView
                style="@style/setting_header"
                android:text="@string/search_news" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_shape"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/head_layout"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:alpha="100"
                fresco:fadeDuration="100"
                fresco:placeholderImage="@color/color_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_01"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/flash"
                    android:gravity="center_vertical"
                    android:text="@string/search_flash"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/classic"
                    android:gravity="center_vertical"
                    android:text="@string/search_classical"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>